# DownloadOrganizer

./: .env.example  .gitignore  AGENTS.md  DEPLOY.md  README.md  RELEASE_NOTES.md  build_exe.ps1  pyinstaller_entry.py  pyproject.toml  pyrightconfig.json  render.yaml  requirements.txt  streamlit_app.py  실행방법.md  실행방법.txt
.github/workflows/: pages.yml
.streamlit/: config.toml
benchmarks/: bench_dup_mode.py
demo_downloads/: LICENSE  README.md  app.js  config.json  data.xyz  index.html  report_v1_copy.txt  server.ts  강의영상.mkv  기안문.hwp  드라이버.msi  메모.txt  백업본.7z  백업설정.bak  분기보고서.pptx  분석스크립트.py  예산내역.xlsx  주소록.csv  회의록_0312.docx
demo_downloads/프로젝트_백업/: old_main.py  readme.md
docs/: DownloadOrganizer_과제_이선준_v0_2.pptx  DownloadOrganizer_발표자료.pptx  index.html
src/download_organizer/: analyzer.py  bookmarks.py  cleaner.py  cli.py  config.py  logging_utils.py  models.py  organizer.py  reports.py  safety.py  service.py
src/download_organizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_bookmarks.py  test_clean.py  test_config.py  test_organizer.py  test_recursive.py  test_routing.py  test_safety.py  test_select_and_date.py  test_sprint.py  test_undo_preview.py
