[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "download-organizer"
version = "0.1.0"
description = "Safe download folder organizer with bookmark analytics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "streamlit>=1.40.0",
  "send2trash>=1.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
download-organizer = "download_organizer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
